# airflow-dbt

./: .gitignore  Makefile  README.md  hatch.toml  pyproject.toml  setup.py
airflow_dbt/: __version__.py  version_compat.py
airflow_dbt/hooks/: dbt_hook.py
airflow_dbt/operators/: __init__.py  dbt_operator.py
