[project]
name = "airflow-dbt-winwin"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow-task-sdk<1.2.0,>=1.0.0",
    "apache-airflow-core>=3.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[tool.hatch.metadata]
allow-direct-references=true

[tool.uv.pip]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.uv]
link-mode="copy"